--- a/pages/about.html
+++ b/pages/about.html
@@ -49,30 +49,77 @@
         </div>
     </nav> -->
 
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"><img src="../assets/MuzzlesLogo.png" alt="Muzzles Restaurant logo" width="250" height="92"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="nav">
-              <li class="nav-item">
-                <a class="nav-link active navbarFont" aria-current="page" href="../pages/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/catering.html">Catering</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-block d-xl-block">
+        <div class="container ">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/catering.html">Catering</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light d-lg-none d-xs-block d-sm-block d-md-block">
+        <div class="container ">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+                <div class="row d-flex justify-content-end">
+
+                    <ul class="nav">
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont" aria-current="page"
+                                    href="../pages/about.html">About</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/menu.html">Menu</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/catering.html">Catering</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/photos.html">Photos</a>
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </nav>
      
 
 
