--- a/index.html
+++ b/index.html
@@ -15,162 +15,92 @@
 
 <body>
   <!-- -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-  <!-- <nav class="navbar navbar-light">
-    <div class="container">
-      <a class="navbar-brand nav-title" href="#">
-        <img src="./assets/MuzzlesLogo.png" alt="" width="250" height="92">
-      </a>
 
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link active navbarFont" aria-current="page" href="./pages/about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link navbarFont" href="#">Menu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link navbarFont" href="./pages/catering.html">Catering</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link navbarFont" href="#">Photo</a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-block d-xl-block">
+    <div class="container ">
+        <a class="navbar-brand" href="../index.html">
+            <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navbarFont" href="../pages/catering.html">Catering</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav> -->
+</nav>
 
+<nav class="navbar navbar-expand-lg navbar-light d-lg-none d-xs-block d-sm-block d-md-block">
+    <div class="container ">
+        <a class="navbar-brand" href="../index.html">
+            <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+            <div class="row d-flex justify-content-end">
 
-  <!-- <div class="collapse justify-content-end navbar" id="navbarToggleExternalContent">
-    <div class="p-4">
-      <span class="text-muted">
-
-        <ul class="nav justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link navbarFont" aria-current="page" href="">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link navbarFont" href="#">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link navbarFont" href="#">Catering</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link navbarFont" href="#">Photo</a>
-          </li>
-        </ul>
-
-      </span>
-    </div>
-  </div>
-  <nav class="navbar navbar-dark">
-    <div class="container-fluid">
-
-      <a class="navbar-brand nav-title" href="#">
-        <img src="./assets/MuzzlesLogo.png" alt="" width="250" height="92">
-      </a>
-
-      <ul class="nav justify-content-end d-sm-none d-md-block">
-        <li class="nav-item">
-          <a class="nav-link navbarFont" aria-current="page" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link navbarFont" href="#">Menu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link navbarFont" href="#">Catering</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link navbarFont" href="#">Photo</a>
-        </li>
-      </ul>
-
-      <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon">
-        </span>
-      </button>
-    </div>
-  </nav> -->
-  
-
-
-
-  <nav class="navbar navbar-expand-lg navbar-light ">
-    <div class="container-fluid ">
-      <a class="navbar-brand" href="./index.html" >
-        <img src="./assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link navbarFont" aria-current="page" href="./pages/about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link navbarFont" href="./pages/menu.html">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link navbarFont" href="./pages/catering.html">Catering</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link navbarFont" href="./pages/photos.html">Photos</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-<!--  -->
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12" id="homeImage">
-
-      </div>
-    </div>
-  </div>
-  <div class="container pt-5">
-    <div class="row M-food-names">
-      <div class="col-lg-6 col-md-12 py-5 px-5">
-        <img src="./assets/homeSingle.jpg" class="img-fluid" alt="Bread with side of Fries">
-      </div>
-      <div class="col-lg-6 col-md-12 py-5">
-        <div class="card">
-          <div class="card-body">
-            <p class="card-text AcardHeading">Muzzles Sandwiches & Grill</p>
-            <p class="AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-              mollit anim id est laborum.</p>
-          </div>
-
-          <div class="row">
-            <div class="col-lg-12 col-md-12">
-              <img src="./assets/HomeImage.jpg" class="card-img-top img-fluid" alt="Bread and a dog getting a food from the table with bread with shrimp in it.">
+                <ul class="nav">
+                    <div class="col-12">
+                        <li class="nav-item">
+                            <a class="d-flex justify-content-center nav-link navbarFont" aria-current="page"
+                                href="../pages/about.html">About</a>
+                        </li>
+                    </div>
+                    <div class="col-12">
+                        <li class="nav-item">
+                            <a class="d-flex justify-content-center nav-link navbarFont"
+                                href="../pages/menu.html">Menu</a>
+                        </li>
+                    </div>
+                    <div class="col-12">
+                        <li class="nav-item">
+                            <a class="d-flex justify-content-center nav-link navbarFont"
+                                href="../pages/catering.html">Catering</a>
+                        </li>
+                    </div>
+                    <div class="col-12">
+                        <li class="nav-item">
+                            <a class="d-flex justify-content-center nav-link navbarFont"
+                                href="../pages/photos.html">Photos</a>
+                        </li>
+                    </div>
+                </ul>
             </div>
-          </div>
-
 
         </div>
-      </div>
     </div>
-  </div>
+</nav>
 
   <footer>
     <div class="container-fluid py-5">
       <div class="row">
-        <div class="col-6 d-flex justify-content-start navbarFont">
+        <div class="col-6 d-flex justify-content-start navbarFont mt-3">
           <p>1357 Mutt Street, Rottweller CA. 12345</p>
         </div>
         <div class="col-6 d-flex justify-content-end">
-          <img src="./assets/CompanyLogo.png" alt="A Special CompanyLogo">
+          <img class="M-footer-img" src="./assets/CompanyLogo.png" alt="A Special CompanyLogo">
         </div>
       </div>
 
       <div class="row">
-        <div class="col-6  d-flex justify-content-start navbarFont">
+        <div class="col-6  d-flex justify-content-start navbarFont ">
           <p>Phone: 123-456-7890</p>
         </div>
         <div class="col-6 d-flex justify-content-end navbarFont">
