--- a/pages/catering.html
+++ b/pages/catering.html
@@ -16,30 +16,77 @@
 
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"><img src="../assets/MuzzlesLogo.png" alt="Muzzles Restaurant logo" width="250" height="92"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="nav">
-              <li class="nav-item">
-                <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active navbarFont" href="../pages/catering.html">Catering</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-block d-xl-block">
+        <div class="container ">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/catering.html">Catering</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light d-lg-none d-xs-block d-sm-block d-md-block">
+        <div class="container ">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+                <div class="row d-flex justify-content-end">
+
+                    <ul class="nav">
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont" aria-current="page"
+                                    href="../pages/about.html">About</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/menu.html">Menu</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/catering.html">Catering</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/photos.html">Photos</a>
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </nav>
     
     <!-- <nav class="navbar navbar-light">
         <div class="container">
@@ -133,13 +180,13 @@
     -->
 </body>
 <div class="footer">
-    <div class="container-fluid py-5">
+    <div class="container mb-0 py-5">
         <div class="row">
-            <div class="col-6 d-flex justify-content-start navbarFont">
+            <div class="col-6 d-flex justify-content-start navbarFont mb-0">
                 <p>1357 Mutt Street, Rottweller CA. 12345</p>
             </div>
             <div class="col-6 d-flex justify-content-end">
-                <img src="../assets/CompanyLogo.png" alt="Muzzle's Restaurant logo">
+                <img class="M-footer-img" src="../assets/CompanyLogo.png" alt="Muzzle's Restaurant logo">
             </div>
         </div>
 
