--- a/pages/menu.html
+++ b/pages/menu.html
@@ -16,58 +16,77 @@
 
 <body>
     <!-- -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-    <!-- <nav class="navbar navbar-light active">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="../assets/MuzzlesLogo.png" alt="" width="250" height="92">
+
+    <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-block d-xl-block">
+        <div class="container ">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
             </a>
-            <ul class="nav justify-content-end M-anchor">
-                <li class="nav-item">
-                    <a  class="nav-link active navbarFont" aria-current="page" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navbarFont" href="#">Menu</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navbarFont" href="#">Catering</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link navbarFont" href="#">Photo</a>
-                </li>
-
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
-                  </a>
-            </ul>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/catering.html">Catering</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </nav> -->
+    </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container-fluid ">
-          <a class="navbar-brand" href="../index.html">
-            <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
-            <ul class="nav">
-              <li class="nav-item">
-                <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/catering.html">Catering</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-light d-lg-none d-xs-block d-sm-block d-md-block">
+        <div class="container ">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+                <div class="row d-flex justify-content-end">
+
+                    <ul class="nav">
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont" aria-current="page"
+                                    href="../pages/about.html">About</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/menu.html">Menu</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/catering.html">Catering</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/photos.html">Photos</a>
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </nav>
+    </nav>
 
 
       
@@ -81,7 +100,7 @@
     </div>
 
     <div class="container pt-5">
-        <div class="row ">
+        <div class="row">
             <div class="col-lg-6 col-md-12 mb-5">
                 <img src="../assets/menubeef.jpg" class="img-fluid" alt="">
 
