--- a/pages/photos.html
+++ b/pages/photos.html
@@ -18,7 +18,7 @@
 
 
 
-        
+
     <!-- <nav class="navbar navbar-light">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -41,32 +41,78 @@
         </div>
     </nav> -->
 
-    <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container-fluid ">
-          <a class="navbar-brand" href="../index.html">
-            <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
-            <ul class="nav">
-              <li class="nav-item">
-                <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/catering.html">Catering</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
-              </li>
-            </ul>
-          </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-block d-xl-block">
+        <div class="container ">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/catering.html">Catering</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light d-lg-none d-xs-block d-sm-block d-md-block">
+        <div class="container ">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../assets/MuzzlesLogo.png" alt="muzzle Restaurant logo" width="250" height="92">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+                <div class="row d-flex justify-content-end">
+
+                    <ul class="nav">
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont" aria-current="page"
+                                    href="../pages/about.html">About</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/menu.html">Menu</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/catering.html">Catering</a>
+                            </li>
+                        </div>
+                        <div class="col-12">
+                            <li class="nav-item">
+                                <a class="d-flex justify-content-center nav-link navbarFont"
+                                    href="../pages/photos.html">Photos</a>
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </nav>
 
     <div style="background-color: #ffffff;" class="container d-flex justify-content-center mt-5">
         <div class="row py-3">
@@ -76,22 +122,23 @@
         </div>
     </div>
 
-    <div class="container py-3">
-        <div class="row d-flex justify-content-center py-5">
-            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3">
+    <div class="container py-3 ">
+        <div class="row d-flex justify-content-center">
+            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3 px-0">
                 <img src="../assets/photo01.jpg" class=" P-border img-fluid" alt="Steak">
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3">
-                <img src="../assets/photo02.jpg" class=" P-border img-fluid" alt="White dog sitting down on the chair looking at the table with food">
+                <img src="../assets/photo02.jpg" class=" P-border img-fluid"
+                    alt="White dog sitting down on the chair looking at the table with food">
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3">
+            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3 ">
                 <img src="../assets/photo03.jpg" class=" P-border img-fluid" alt="CheeseCake">
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3">
+            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3 px-0">
                 <img src="../assets/photo04.jpg" class=" P-border img-fluid" alt="Dog eating on the plate">
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3">
+            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3 px-0">
                 <img src="../assets/photo05.jpg" class=" P-border img-fluid" alt="Barbecue Shrimp">
             </div>
 
@@ -103,11 +150,11 @@
                 <img src="../assets/photo07.jpg" class=" P-border img-fluid" alt="Two dogs eating the same bread">
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3">
+            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3 px-0">
                 <img src="../assets/photo08.jpg" class=" P-border img-fluid" alt="Barbecue ribs with chili in the side">
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3">
+            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3 px-0">
                 <img src="../assets/photo09.jpg" class=" P-border img-fluid" alt="Fried fish">
             </div>
 
@@ -119,7 +166,7 @@
                 <img src="../assets/photo11.jpg" class=" P-border img-fluid" alt="a dog getting a food from the table">
             </div>
 
-            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3">
+            <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3 px-0">
                 <img src="../assets/photo12.jpg" class=" P-border img-fluid" alt="Smoked Salmon">
             </div>
         </div>
